--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -27,16 +27,9 @@ jobs:
 
     - name: Prepare artifacts for deployment
       run: |
-        mkdir -p before-deploy
-        cp scripts/*.sh before-deploy/
-        cp appspec.yml before-deploy/
-        cp build/libs/*.jar before-deploy/
-        cd before-deploy && zip -r before-deploy
-        cd ../ && mkdir -p deploy
-        mv before-deploy/before-deploy.zip deploy/cookiehouse.zip
-        # zip -r cookiehouse *
-        # mkdir -p deploy
-        # mv cookiehouse.zip deploy/cookiehouse.zip
+        zip -r cookiehouse *
+        mkdir -p deploy
+        mv cookiehouse.zip deploy/cookiehouse.zip
 
     - name: Deploy to S3 (GitHub Artifacts)
       uses: actions/upload-artifact@v2
