--- a/appspec.yml
+++ b/appspec.yml
@@ -8,11 +8,11 @@ files:
 permissions:
   - object: /
     pattern: "**"
-    owner: ec2-user
-    group: ec2-user
+    owner: root
+    group: root
 
 hooks:
   ApplicationStart:
-    - location: deploy.sh
+    - location: /home/ec2-user/app/step2/zip/deploy.sh
       timeout: 60
-      runas: ec2-user
+      runas: root
