--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,13 +17,13 @@ spring:
             client-id: ${GOOGLE_CLIENT_ID}
             client-secret: ${GOOGLE_CLIENT_SECRET}
             authorization-grant-type: authorization_code
-            redirect-uri: http://localhost:8080/login/oauth2/code/google
+            redirect-uri: https://cookie-house.store/login/oauth2/code/google
             scope: profile
           kakao:
             client-id: ${KAKAO_CLIENT_ID}
             client-secret: ${KAKAO_CLIENT_SECRET}
             authorization-grant-type: authorization_code
-            redirect-uri: http://127.0.0.1:5173/redirect
+            redirect-uri: https://cookiehouse.site/redirect
             scope: profile_nickname
         provider:
           google:
