feat: wallpaperId 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
             client-id: ${GOOGLE_CLIENT_ID}
             client-secret: ${GOOGLE_CLIENT_SECRET}
             authorization-grant-type: authorization_code
-            redirect-uri: https://cookie-house.store/login/oauth2/code/google
+            redirect-uri: http://localhost:8080/login/oauth2/code/google
             scope: profile
           kakao:
             client-id: ${KAKAO_CLIENT_ID}
