feat: 미션 수행 내역 조회 시 missionMessage 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,7 +23,7 @@ spring:
             client-id: ${KAKAO_CLIENT_ID}
             client-secret: ${KAKAO_CLIENT_SECRET}
             authorization-grant-type: authorization_code
-            redirect-uri: https://cookiehouse.site/redirect
+            redirect-uri: https://www.cookiehouse.site/redirect
             scope: profile_nickname
         provider:
           google:
