--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  servlet:
+    multipart:
+      max-file-size: 256MB
+      max-request-size: 512MB
   datasource:
     url: ${DB_JDBC_URL}
     username: ${DB_USER}
